# camera_mapping

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
models/: knn_bottom.npy  knn_top.npy  metrics_knn.json  metrics_polynomial.json  polynomial_bottom.npy  polynomial_top.npy
solution/: data_loader.py  eval.py  model.py  predict.py  train.py
