[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "keeney",email = "alahavbar7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.15"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.0,<2.0.0)"
]
